# Paper-Format-skill

./: .gitignore  README.md  pyproject.toml  运行批量规范化.ps1
docs/: 性能基准说明.md  最简使用流程.md  表格规则说明.md
docs/superpowers/plans/: 2026-04-18-paper-format-normalizer.md
docs/superpowers/specs/: 2026-04-16-paper-format-normalizer-design.md
rules/zhuhuanqin_phase1/: document_rules.csv  numbering_rules.csv  paragraph_rules.csv  report_schema.csv  special_object_rules.csv  table_rules.csv
skills/paper-format-normalizer/: SKILL.md
src/paper_format_normalizer/: __init__.py  classify.py  cli.py  conversion.py  model.py  normalize.py  parse.py  report.py  rules.py
templates/paper-format-rules/: document_rules.csv  numbering_rules.csv  paragraph_rules.csv  report_schema.csv  special_object_rules.csv  table_rules.csv
tests/: conftest.py  test_classify.py  test_cli.py  test_conversion.py  test_normalize.py  test_parse.py  test_rules.py
tests/fixtures/: sample_docx_builder.py
tests/fixtures/sample_rules/: document_rules.csv  numbering_rules.csv  paragraph_rules.csv  special_object_rules.csv  table_rules.csv
规则化文件夹/: document_rules.csv  numbering_rules.csv  paragraph_rules.csv  table_rules.csv
